recursion.cons.lessons.recursion.cons.Reverse.scala.error
reverse:5: error: type mismatch;
 found   : Int
 required: scala.collection.GenTraversableOnce[?]
		return reverse(l.tail) ++ l.head;
                                            ^